# livery

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  GLOSSARY.md  README.md  UBIQUITOUS_LANGUAGE.md  deno.json  index.html  skills-lock.json  vite.config.ts
.claude/: settings.json
.githooks/: checks-frontend.ts  pre-commit
src/: AGENTS.md  (+5 more)
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: testing.md
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/config/: commands.rs  defaults.rs  io.rs  mod.rs  types.rs
src-tauri/src/updaters/: config_file.rs  ghostty.rs  lazygit.rs  mod.rs  nvim.rs  obsidian.rs  system_appearance.rs  tmux.rs  zed.rs
src-tauri/src/updaters/file_ops/: jsonc.rs  mod.rs  text.rs  yaml.rs
src-tauri/tests/fixtures/jsonc/: obsidian-appearance-dark-expected.json  obsidian-appearance.json  obsidian-style-settings-dark-expected.json  obsidian-style-settings-light-expected.json  obsidian-style-settings.json  zed-settings-expected.jsonc  zed-settings-object-light-expected.jsonc  zed-settings-object.jsonc  zed-settings-plain-expected.json  zed-settings-plain.json  zed-settings.jsonc
src-tauri/tests/fixtures/text/: delta-config-expected.ini  delta-config.ini  ghostty-config-expected.txt  ghostty-config.txt  nvim-config-expected.lua  nvim-config-vimcmd-expected.lua  nvim-config-vimcmd.lua  nvim-config.lua  tmux-expected.conf  tmux.conf
src-tauri/tests/fixtures/yaml/: lazygit-config-expected.yml  lazygit-config.yml  lazygit-theme-source.yml  simple-config-expected.yml  simple-config.yml
(+111 files in other folders)
