[package]
name = "livery"
version = "0.0.3"
description = "Paint your cockpit — Black Atom theme management"
authors = ["Black Atom Industries"]
license = "MIT"
repository = "https://github.com/black-atom-industries/livery"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "livery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
dirs = "6"
shellexpand = "3"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
